feat: implement auto-HTML generation for JFR recordings; add integration tests to verify functionality